Update with the latest Netty Core changes